Feature/register (#5)
* added swagger.yaml

* - Added `username` and `university` to `User` entity.
- Added AuthenticationController and Service.

* Added Travis Build Status

* Modified HealthController to add logging

* Added 'password' field to User and encoded it during signup

* Changed encoder

* Added bases for JWT authentication

* Updated swagger.yaml

* Added SignUp tests

* Minor fixes

* Returning 400 instead of 422 on validation errors

* Minor merge fix
