# src/main/java/com/example/rpl/RPL/controller/dto/CreateUserDTO.java
@@ -1,0 +1,29 @@
+package com.example.rpl.RPL.controller.dto;
+
+import javax.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+@AllArgsConstructor
+@Getter
+public class CreateUserDTO {
+
+    @NotNull
+    private String username;
+
+    @NotNull
+    private String email;
+
+    @NotNull
+    private String password;
+
+    private String name;
+
+    private String surname;
+
+    private String studentId;
+
+    private String degree;
+
+    private String university;
+}
